--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Attendex"
         tools:targetApi="31" >
         <activity
+            android:name=".test"
+            android:exported="false"
+            android:label="@string/title_activity_test"
+            android:theme="@style/Theme.Attendex.NoActionBar" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
