--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
-
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -25,6 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Attendex"
         tools:targetApi="31">
+        <activity
+            android:name=".TeacherProfileActivity"
+            android:exported="false" />
         <activity
             android:name=".VisaActivity"
             android:exported="false" />
