--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/Theme.Attendex"
         tools:targetApi="31">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".TeacherProfileActivity"
             android:exported="false" />
         <activity
@@ -56,12 +59,12 @@
         <activity
             android:name=".prelogin"
             android:exported="false" />
-
         <activity
             android:name=".ClaimsAdapter"
             android:exported="false" />
-        <activity android:name=".ActivityClaims"
-                   android:exported="false" />
+        <activity
+            android:name=".ActivityClaims"
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
